k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: temperature-api
spec:
  selector:
    app: temperature-api
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
